# text_to_action

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py
examples/cross_language/: README.md  main.go  main.js  reqirements.txt  server.py
src/text_to_action/: __init__.py  action_dispatcher.py  create_actions.py  entity_models.py  extract_parameters.py  llm_utils.py  main.py  types.py  utils.py  vector_emb.py
src/text_to_action/action_embeddings/: calculator.h5
src/text_to_action/actions/: calculator.py  on_device.py
src/text_to_action/example_actions/calculator/: descriptions.json  embeddings.h5  implementation.py
